Fix `<select>` alignment (#2256)

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -41,6 +41,11 @@ textarea {
   }
 }
 
+select {
+  min-height: 0;
+  padding: 0.8rem 0.5rem;
+}
+
 input[type='file'] {
   color: inherit;
   display: block;
